# portfolio

./: .dockerignore  .gitignore  ;  Cargo.toml  Dockerfile  README.md  atlas.hcl  bacon.toml  compose.yaml  flake.nix  fly.toml  input.css  justfile  mutagen.yml  process-compose.yaml  refinery.toml  schema.hcl  tailwind.config.js
.devenv/: profile  run
ci/: Cargo.toml
ci/src/: main.rs  pipelines.rs
ci/src/pipelines/: build_pipeline.rs  deploy_pipeline.rs  test_pipeline.rs
domain/: Cargo.toml
domain/src/: post.rs
migrations/: 20240125171208_initial.sql  V0001__initial_db.sql  atlas.sum
persistence/: Cargo.toml
persistence/src/: connection_pool.rs  lib.rs  post_repository.rs
persistence/test_utils/: Cargo.toml
persistence/test_utils/src/: atlas_image.rs  lib.rs
public/scripts/: sse.js
public/styles/: tailwind.css
server/: Cargo.toml
server/public/styles/: base.css  reset.css  tailwind.css
server/src/: main.rs  views.rs
server/src/views/: articles.rs  (+1 more)
server/templates/: articles.html  index.html
src/: config.rs  main.rs  views.rs
src/api/: hot_reload.rs
src/models/: forest_spirit.rs  mod.rs
src/views/: about.rs  blog.rs  home.rs  index.rs  now.rs  photos.rs  posts.rs  projects.rs  xcombinator.rs
templates/: about.html  base.html  blog.html  home.html  index.html  now.html  photos.html  posts.html  projects.html  xcombinator.html
templates/blocks/: forest-sprites.html  grass-footer.html  navbar.html
templates/fragments/: navbar.html
views/: Cargo.toml
views/src/: home.rs
views/templates/: base.html  home.html  index.html
