[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
domain = { path = "../domain" }
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "uuid", "chrono", "time"] }
sqlx-postgres = "0.7.3"
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.3.2", features = ["postgres"] }
persistence_test_utils = { path = "./test_utils" }
